# agent-passport

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-CC-BY-4.0  README.md  deny.toml
.flow/: params.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  release.yml
SPECS/: Workplan.md
SPECS/COMMANDS/: FLOW.md  REBUILD.md  SETUP.md
SPECS/ROLES/: Mentor.md  Plan.md  TDD_Executor.md  TDD_Executor_xml.md
drafts/: agent-passport.md
examples/: log-processor.passport.yaml  specauthor-behavior-policy.passport.yaml
src/: lib.rs  main.rs  model.rs  validator.rs
tests/: cli.rs
