[package]
name = "agent-passport"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI validator for Agent Passport YAML documents"
repository = "https://github.com/0al-spec/agent-passport"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
yaml_serde = "0.10.4"

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "agent-passport"
path = "src/main.rs"
